--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swagger-merge",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/",
   "directories": {
     "test": "test"
   },
@@ -11,7 +11,14 @@
     "test": "npm run lint && npm run test:unit",
     "lint": "jshint */*.js"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abtris/swagger-merge.git"
+  },
+  "bugs": {
+    "url": "https://github.com/abtris/swagger-merge/issues"
+  },
+  "author": "Ladislav Prskavec <ladislav@prskavec.net>",
   "license": "MIT",
   "dependencies": {
     "debug": "2.2.0",
