--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swagger-merge",
+  "name": "swagger-merge-extensions",
   "version": "1.0.0",
   "description": "",
   "main": "lib/",
