--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swagger-manage-extensions",
-  "version": "1.0.2",
-  "description": "",
+  "version": "1.0.3",
+  "description": "Swagger Manage Extensions - merge/split API Description and AWS API Gateway Integration",
   "main": "lib/",
   "directories": {
     "test": "test"
