--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "debug": "2.2.0",
-    "js-yaml": "3.6.1"
+    "js-yaml": "3.6.1",
+    "yargs": "4.7.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
