--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.4",
   "description": "Swagger Manage Extensions - merge/split API Description and AWS API Gateway Integration",
   "bin": {
-      "sme": "bin/sme"
+    "sme": "bin/sme"
   },
   "main": "lib/",
   "directories": {
@@ -24,13 +24,13 @@
   "author": "Ladislav Prskavec <ladislav@prskavec.net>",
   "license": "MIT",
   "dependencies": {
-    "debug": "2.2.0",
-    "js-yaml": "3.6.1",
-    "yargs": "4.7.1"
+    "debug": ">=2.6.9",
+    "js-yaml": ">=3.13.1",
+    "yargs": ">=16.2.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "jshint": "2.9.2",
-    "mocha": "2.4.5"
+    "jshint": "^2.12.0",
+    "mocha": "^8.3.2"
   }
 }
